# CAvatar

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  cavatar.c  config.h  gen.c  gen.h  helper_routes.c  helper_routes.h  index.html  makefile  util.c  util.h
cmake/Modules/: FindLibEvent.cmake  FindLibevhtp.cmake
static/: index.html
